// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeDetail /> Should not render ingredients if none 1`] = `
<div
  className="p2 bg-white"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
    src="test url"
  />
  <div>
    <span>
      Dessert
    </span>
    <span>
      100
    </span>
  </div>
  <h3>
    Ingredients:
  </h3>
  <h3>
    Steps:
  </h3>
  <ol>
    <li>
      Steps 1
    </li>
    <li>
      Steps 2
    </li>
  </ol>
  <a
    hred="/recipe/1"
    href="/recipe/1"
    onClick={[Function]}
  >
    See More
  </a>
</div>
`;

exports[`<RecipeDetail /> Should not render steps if none 1`] = `
<div
  className="p2 bg-white"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
    src="test url"
  />
  <div>
    <span>
      Dessert
    </span>
    <span>
      100
    </span>
  </div>
  <h3>
    Ingredients:
  </h3>
  <ul>
    <li>
      Ingrendient 1
    </li>
    <li>
      Ingrendient 2
    </li>
  </ul>
  <h3>
    Steps:
  </h3>
  <a
    hred="/recipe/1"
    href="/recipe/1"
    onClick={[Function]}
  >
    See More
  </a>
</div>
`;

exports[`<RecipeDetail /> Should render passed recipe 1`] = `
<div
  className="p2 bg-white"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
    src="test url"
  />
  <div>
    <span>
      Dessert
    </span>
    <span>
      100
    </span>
  </div>
  <h3>
    Ingredients:
  </h3>
  <ul>
    <li>
      Ingrendient 1
    </li>
    <li>
      Ingrendient 2
    </li>
  </ul>
  <h3>
    Steps:
  </h3>
  <ol>
    <li>
      Steps 1
    </li>
    <li>
      Steps 2
    </li>
  </ol>
  <a
    hred="/recipe/1"
    href="/recipe/1"
    onClick={[Function]}
  >
    See More
  </a>
</div>
`;

exports[`<RecipeDetail /> Should render zero state if no recipe passed 1`] = `
<p
  className="classNames('h3 p2 bg-white italic center'), props.className)"
>
  Please select a recipe to see the detail.
</p>
`;
